<resources>
    <string name="app_name">Morse Trainer</string>
    <string name="app_name2">M180907_Morse</string>
    <string name="Morse_Item">Morse_Item</string>
    <string name="Morse_Code">Morse_Code</string>
    <string name="Morse_Set">Settings</string>
    <string name="Morse_KeyBoard">Morse_KeyBoard</string>
    <string name="Morse_Game">Morse_Game</string>
    <string name="set_sound">Sound</string>
    <string name="set_sun1">800</string>
    <string name="set_sun2">600</string>
    <string name="set_sun3">400</string>
    <string name="set_speed">Speed</string>
    <string name="set_speed1">70</string>
    <string name="set_speed2">90</string>
    <string name="set_speed3">120</string>
    <string name="set_Light">Light</string>
    <string name="set_Backlight">Backlight</string>
    <string name="input_title">Item_name</string>
    <string name="input_nitem">Add Item</string>
    <string name="input_bigKey">KEY</string>
    <string name="input_bigKey2">MemoryKey</string>
    <string name="input_title_empt">Title is emptiness</string>
    <string name="input_code">MorseCode</string>
    <string name="add_item_Save">Save</string>
    <string name="add_item_Delete">Del</string>
    <string name="set_FnKey">FunKey</string>
    <string name="set_FnKey_name">Key_name</string>
    <string name="set_FnKey_Code">-.-. --.-</string>
    <string name="set_key1">.</string>
    <string name="set_key2">-</string>
    <string name="set_key11">dit</string>
    <string name="set_key22">dah</string>
    <string name="set_key3">cls</string>
    <string name="set_key4">sav</string>
    <string name="Fn1">Fn1</string>
    <string name="Fn2">Fn2</string>
    <string name="Fn3">Fn3</string>
    <string name="Fn4">Fn4</string>
    <string name="Fn5">Fn5</string>
    <string name="Fn6">Fn6</string>
    <string name="Fn7">Fn7</string>
    <string name="Fn8">Fn8</string>
    <string name="admob_1">ca-app-pub-0547405774182700/4487579851</string>
    <string name="admob_2">ca-app-pub-0547405774182700/2097220230</string>
    <string name="admob_3">ca-app-pub-0547405774182700/8353553115</string>
    <string name="admob_app_id">ca-app-pub-0547405774182700~1689848511</string>
    <string name="addTestDeviceH">C9517774AEB25C5D4B40D8175F152E03</string>
    <string name="addTestDeviceASUS">78957C13BCC9AA1AC5D8462F2DEC083A</string>
    <string name="addTestDeviceMI">86AEBAEA97BDD84167E1B21ED9490D8B</string>
</resources>
