<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:id="@+id/dialogLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/morse_set_dialogT1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/set_FnKey_name"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/morse_set_dialogT2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/morse_set_dialogT3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/morse_set_dialogB3"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="12dp"
                android:background="@drawable/dutu_key"
                android:text="@string/set_key3" />


            <Button
                android:id="@+id/morse_set_dialogB1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="12dp"
                android:background="@drawable/dutu_key"
                android:text="@string/set_key11" />

            <Button
                android:id="@+id/morse_set_dialogB2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="12dp"
                android:background="@drawable/dutu_key"
                android:text="@string/set_key22" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
