<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Morse_key">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:orientation="vertical">

        <!--トップの光出力と設定部分-->
        <LinearLayout
            android:id="@+id/l1"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="@color/listviewbkcolor"
            android:paddingLeft="12dp">
            <!--出力窓-->
            <TextView
                android:id="@+id/cqcq"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:layout_gravity="center"
                android:background="@drawable/out_window" />
            <!--設定項目エリア-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left|right"
                android:gravity="right"
                android:orientation="horizontal"
                android:padding="12dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="vertical">

                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contextClickable="true"
                        android:text="@string/set_sound" />

                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contextClickable="true"
                        android:text="@string/set_Light" />

                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contextClickable="true"
                        android:text="@string/set_Backlight" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:width="88dp"
                        android:height="88dp"
                        android:text="Button" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <!--モールスコードリスト部分-->
        <LinearLayout
            android:id="@+id/l2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@android:color/darker_gray"
            android:orientation="vertical">

            <ListView
                android:id="@+id/morselist"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </ListView>

        </LinearLayout>

        <!--下のボタン部分-->
        <LinearLayout
            android:id="@+id/l3"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_gravity="center"
            android:background="@android:color/darker_gray"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonkey1"
                android:layout_width="158dp"
                android:layout_height="158dp" />

            <Button
                android:id="@+id/buttonkey2"
                android:layout_width="158dp"
                android:layout_height="158dp" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>